# SaniApp_tz

./: .editorconfig  .env.example  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml
_docker/: Dockerfile
http/: sanic_app.postman_collection.json
sanic_app/: app.py  config.py  main.py
sanic_app/api/: __init__.py  bill.py  product.py  transaction.py  user.py
sanic_app/api/payment/: __init__.py  webhook.py
sanic_app/api/user/: __init__.py  auth.py
sanic_app/migrations/models/: 0_20221028024229_init.py  1_20221029000702_update.py
sanic_app/models/: __init__.py  bill.py  product.py  score.py  transaction.py  user.py
sanic_app/params/: __init__.py
sanic_app/serializers/: __init__.py
sanic_app/serializers/params/: __init__.py  transaction_params.py  user_params.py  webhook_params.py
sanic_app/serializers/response/: __init__.py  status.py
sanic_app/until/: __init__.py  crypto_hash.py  custom_auth.py  registation.py
sanic_tz/: main.py
