[tool.poetry]
name = "sanic-tz"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sanic_tz"}]

[tool.poetry.dependencies]
python = "^3.9"
sanic = "^22.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
